--- a/.flux.yaml
+++ b/.flux.yaml
@@ -12,9 +12,9 @@ metadata:
   namespace: FILLED_IN_BY_CI
 spec:
   interval: 5m0s
-  url: https://github.com/biomage-org/worker
+  url: https://github.com/biomage-org/pipeline
   ref:
-    branch: "master"
+    branch: FILLED_IN_BY_CI
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
