fix production image regex

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -246,7 +246,7 @@ jobs:
             export KUBERNETES_ENV="production"
             export REPLICA_COUNT="3"
             export VERSION_NUMBER=${REF_ID/refs-tags-/}
-            export IMAGE_PATTERN="^(?P<version>[0-9]+\.[0-9]+\.[0-9])+$"
+            export IMAGE_PATTERN="^refs-tags-(?P<version>[0-9]+\.[0-9]+\.[0-9]+)"
             export IMAGE_EXTRACT='$version'
             export IMAGE_POLICY_TYPE="semver"
             export IMAGE_POLICY_KEY="range"
@@ -300,7 +300,7 @@ jobs:
             select(di == 3).metadata.name = strenv(DEPLOYMENT_NAME) |
             select(di == 3).metadata.namespace = strenv(NAMESPACE) |
             select(di == 3).spec.imageRepositoryRef.name = strenv(DEPLOYMENT_NAME) |
-            select(di == 3).spec.filterTags.pattern = strenv(IMAGE_PATTERN) |
+            select(di == 3).spec.filterTags.pattern = strenv(IMAGE_PATTERN) + "-pipeline-runner" |
             select(di == 3).spec.filterTags.extract = strenv(IMAGE_EXTRACT) |
             select(di == 3).spec.policy.[strenv(IMAGE_POLICY_TYPE)].[strenv(IMAGE_POLICY_KEY)] = strenv(IMAGE_POLICY_VALUE) |
             select(di == 4).metadata.name = strenv(DEPLOYMENT_NAME) + "-image-update" |
