--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -325,6 +325,7 @@ jobs:
         env:
           IMAGE_NAME: ${{ format('{0}/{1}:{2}', steps.login-ecr.outputs.registry, needs.build-docker.outputs.repo-name, needs.build-docker.outputs.image-tag) }}
           REF_ID: ${{ needs.build-docker.outputs.ref-id }}
+          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
 
       - name: Push production/develop template to releases
         if:
