--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -203,8 +203,12 @@ jobs:
           echo Pushing image $IMAGE_NAME-builder to ECR.
           docker push $IMAGE_NAME-builder
 
-          echo Pushing image $IMAGE_NAME to ECR.
-          docker push $IMAGE_NAME
+          TIMESTAMP=$(date +%s)
+
+          echo Pushing image $IMAGE_NAME-$TIMESTAMP to ECR.
+
+          docker tag $IMAGE_NAME $IMAGE_NAME-$TIMESTAMP
+          docker push $IMAGE_NAME-$TIMESTAMP
         env:
           IMAGE_NAME: ${{ format('{0}/{1}:{2}-{3}', steps.login-ecr.outputs.registry, steps.ref.outputs.repo-name, steps.ref.outputs.image-tag, matrix.project) }}
 
