--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -59,6 +59,7 @@ jobs:
       repo-name: ${{ steps.ref.outputs.repo-name }}
       image-tag: ${{ steps.ref.outputs.image-tag }}
       ref-id: ${{ steps.ref.outputs.ref-id }}
+      timestamp: ${{ steps.ref.outputs.timestamp }}
     defaults:
       run:
         working-directory: ${{ matrix.project }}
@@ -84,21 +85,31 @@ jobs:
           # in push events, the latest commit of the master branch is GITHUB_SHA
           # in PR synch the latest commit of the branch is found in github.event.pull_request.head.sha instead
 
+          TIMESTAMP=$(date +%s)
+
           if [ "${{ github.event_name }}" = "release" ] && [ "${{ github.event.action }}" = "released" ]; then
             COMMIT_SHA=""
             IMAGE_TAG=$REF_ID
+            TIMESTAMP=""
           elif [ "${{ github.event_name }}" = "pull_request" ]; then
             COMMIT_SHA="${{ github.event.pull_request.head.sha }}"
             IMAGE_TAG="$REF_ID-$COMMIT_SHA"
+            TIMESTAMP=$TIMESTAMP
           else
             COMMIT_SHA=$GITHUB_SHA
             IMAGE_TAG="$REF_ID-$COMMIT_SHA"
+            TIMESTAMP=$TIMESTAMP
           fi
 
           # IMAGE_TAG is used in the Build Docker Image step.
           # We can easily build the image-tag from REF_ID and COMMIT_SHA for non-production releases.
           # But we can not easily create the image tag for production releases, so we're bulding it here
           echo "::set-output name=image-tag::$IMAGE_TAG"
+
+          # TIMESTAMP is used to prefix images in the push docker images to ECR step.
+          # We DO NOT want builder and release images to be stamped with timestamp as it will make it
+          # impossible to find without queries to ECR. We only want to timestamp images for PRs and staging images.
+          echo "::set-output name=timestamp::$TIMESTAMP"
 
           # This will take a GitHub repo name like `biomage-org/releases`
           # and turns it into `releases`. This will be the name of the
@@ -203,14 +214,19 @@ jobs:
           echo Pushing image $IMAGE_NAME-builder to ECR.
           docker push $IMAGE_NAME-builder
 
-          TIMESTAMP=$(date +%s)
+          echo Pushing image $IMAGE_NAME to ECR.
 
-          echo Pushing image $IMAGE_NAME-$TIMESTAMP to ECR.
+          if[ -z "$TIMESTAMP" ]; then
+            OUTPUT_TAG="$IMAGE_NAME"
+          elif
+            OUTPUT_TAG="$IMAGE_NAME-$TIMESTAMP"
+          fi
 
-          docker tag $IMAGE_NAME $IMAGE_NAME-$TIMESTAMP
-          docker push $IMAGE_NAME-$TIMESTAMP
+          docker tag $IMAGE_NAME $OUTPUT_TAG
+          docker push $OUTPUT_TAG
         env:
           IMAGE_NAME: ${{ format('{0}/{1}:{2}-{3}', steps.login-ecr.outputs.registry, steps.ref.outputs.repo-name, steps.ref.outputs.image-tag, matrix.project) }}
+          TIMESTAMP: ${{ steps.ref.output.timestamp }}
 
   deploy:
     name: Deploy to Kubernetes
@@ -250,7 +266,7 @@ jobs:
             export KUBERNETES_ENV="production"
             export REPLICA_COUNT="3"
             export VERSION_NUMBER=${REF_ID/refs-tags-/}
-            export IMAGE_PATTERN="^refs-tags-(?P<version>[0-9]+\.[0-9]+\.[0-9]+)"
+            export IMAGE_PATTERN="^refs-tags-(?P<version>[0-9]+\.[0-9]+\.[0-9]+)-pipeline-runner"
             export IMAGE_EXTRACT='$version'
             export IMAGE_POLICY_TYPE="semver"
             export IMAGE_POLICY_KEY="range"
@@ -264,7 +280,7 @@ jobs:
             export CHART_REF="$GITHUB_SHA"
             export KUBERNETES_ENV="staging"
             export REPLICA_COUNT="0"
-            export IMAGE_PATTERN="^$REF_ID-[a-f0-9]+-(?P<timestamp>[0-9]+)"
+            export IMAGE_PATTERN="^$REF_ID-[a-f0-9]+-pipeline-runner-(?P<timestamp>[0-9]+)"
             export IMAGE_EXTRACT='$timestamp'
             export IMAGE_POLICY_TYPE="numerical"
             export IMAGE_POLICY_KEY="order"
@@ -278,7 +294,7 @@ jobs:
             export CHART_REF="FILLED_IN_BY_BIOMAGE_STAGE"
             export KUBERNETES_ENV="staging"
             export REPLICA_COUNT="0"
-            export IMAGE_PATTERN="^$REF_ID-[a-f0-9]+-(?P<timestamp>[0-9]+)"
+            export IMAGE_PATTERN="^$REF_ID-[a-f0-9]+-pipeline-runner-(?P<timestamp>[0-9]+)"
             export IMAGE_EXTRACT='$timestamp'
             export IMAGE_POLICY_TYPE="numerical"
             export IMAGE_POLICY_KEY="order"
@@ -304,7 +320,7 @@ jobs:
             select(di == 3).metadata.name = strenv(DEPLOYMENT_NAME) |
             select(di == 3).metadata.namespace = strenv(NAMESPACE) |
             select(di == 3).spec.imageRepositoryRef.name = strenv(DEPLOYMENT_NAME) |
-            select(di == 3).spec.filterTags.pattern = strenv(IMAGE_PATTERN) + "-pipeline-runner" |
+            select(di == 3).spec.filterTags.pattern = strenv(IMAGE_PATTERN) |
             select(di == 3).spec.filterTags.extract = strenv(IMAGE_EXTRACT) |
             select(di == 3).spec.policy.[strenv(IMAGE_POLICY_TYPE)].[strenv(IMAGE_POLICY_KEY)] = strenv(IMAGE_POLICY_VALUE) |
             select(di == 4).metadata.name = strenv(DEPLOYMENT_NAME) |
@@ -316,7 +332,7 @@ jobs:
             select(di == 5).spec.chart.spec.sourceRef.name = strenv(DEPLOYMENT_NAME) |
             select(di == 5).spec.chart.spec.sourceRef.namespace = strenv(NAMESPACE) |
             select(di == 5).spec.values.clusterEnv = strenv(KUBERNETES_ENV) |
-            select(di == 5).spec.values.pipelineRunner.image = strenv(IMAGE_NAME) + "-pipeline-runner" |
+            select(di == 5).spec.values.pipelineRunner.image = strenv(IMAGE_NAME) |
             select(di == 5).spec.values.pipelineRunner.image line_comment = strenv(IMAGE_POLICY_TAG) |
             select(di == 5).spec.values.sandboxId = strenv(SANDBOX_ID) |
             select(di == 5).spec.values.memoryRequest = strenv(MEMORY_REQUEST) |
@@ -327,7 +343,7 @@ jobs:
 
           cat $DEPLOYMENT_NAME.yaml
         env:
-          IMAGE_NAME: ${{ format('{0}/{1}:{2}', steps.login-ecr.outputs.registry, needs.build-docker.outputs.repo-name, needs.build-docker.outputs.image-tag) }}
+          IMAGE_NAME: ${{ format('{0}/{1}:{2}-{3}', steps.login-ecr.outputs.registry, needs.build-docker.outputs.repo-name, needs.build-docker.outputs.image-tag, matrix.project) }}
           REF_ID: ${{ needs.build-docker.outputs.ref-id }}
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
 
