--- a/.flux.yaml
+++ b/.flux.yaml
@@ -51,7 +51,7 @@ spec:
   git:
     commit:
       author:
-        name: Flux CI/CD
+        name: Flux Image Autoupdate
         email: ci@biomage.net
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
