--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -264,6 +264,7 @@ jobs:
             export SANDBOX_ID="default"
             export CHART_REF="$GITHUB_SHA"
             export KUBERNETES_ENV="production"
+            export IMAGE_TAG=$IMAGE_NAME
             export REPLICA_COUNT="3"
             export VERSION_NUMBER=${REF_ID/refs-tags-/}
             export IMAGE_PATTERN="^refs-tags-(?P<version>[0-9]+\.[0-9]+\.[0-9]+)-pipeline-runner"
@@ -279,6 +280,7 @@ jobs:
             export SANDBOX_ID="default"
             export CHART_REF="$GITHUB_SHA"
             export KUBERNETES_ENV="staging"
+            export IMAGE_TAG="$IMAGE_NAME-$TIMESTAMP"
             export REPLICA_COUNT="0"
             export IMAGE_PATTERN="^$REF_ID-[a-f0-9]+-pipeline-runner-(?P<timestamp>[0-9]+)"
             export IMAGE_EXTRACT='$timestamp'
@@ -293,6 +295,7 @@ jobs:
             export SANDBOX_ID="STAGING_SANDBOX_ID"
             export CHART_REF="FILLED_IN_BY_BIOMAGE_STAGE"
             export KUBERNETES_ENV="staging"
+            export IMAGE_TAG="$IMAGE_NAME-$TIMESTAMP"
             export REPLICA_COUNT="0"
             export IMAGE_PATTERN="^$REF_ID-[a-f0-9]+-pipeline-runner-(?P<timestamp>[0-9]+)"
             export IMAGE_EXTRACT='$timestamp'
@@ -332,7 +335,7 @@ jobs:
             select(di == 5).spec.chart.spec.sourceRef.name = strenv(DEPLOYMENT_NAME) |
             select(di == 5).spec.chart.spec.sourceRef.namespace = strenv(NAMESPACE) |
             select(di == 5).spec.values.clusterEnv = strenv(KUBERNETES_ENV) |
-            select(di == 5).spec.values.pipelineRunner.image = strenv(IMAGE_NAME) |
+            select(di == 5).spec.values.pipelineRunner.image = strenv(IMAGE_TAG) |
             select(di == 5).spec.values.pipelineRunner.image line_comment = strenv(IMAGE_POLICY_TAG) |
             select(di == 5).spec.values.sandboxId = strenv(SANDBOX_ID) |
             select(di == 5).spec.values.memoryRequest = strenv(MEMORY_REQUEST) |
@@ -346,6 +349,7 @@ jobs:
           IMAGE_NAME: ${{ format('{0}/{1}:{2}-{3}', steps.login-ecr.outputs.registry, needs.build-docker.outputs.repo-name, needs.build-docker.outputs.image-tag, matrix.project) }}
           REF_ID: ${{ needs.build-docker.outputs.ref-id }}
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          TIMESTAMP: ${{ steps.ref.output.timestamp }}
 
       - name: Push production/develop template to releases
         if:
