update namespace and documentation

--- a/pipeline-runner/NAMESPACE
+++ b/pipeline-runner/NAMESPACE
@@ -32,17 +32,15 @@ export(merge_scdata_list)
 export(normalize_annotation_types)
 export(normalize_data)
 export(prepare_experiment)
+export(prepare_sct_integration)
 export(read_10x_annotations)
 export(remove_filtered_cells)
 export(remove_genes)
 export(runClusters)
 export(run_emptydrops)
 export(run_geosketch)
-export(run_lognorm_int_workflow)
 export(run_pca)
-export(run_sct_int_workflow)
 export(score_doublets)
-export(sctransform_normalization)
 export(subset_ids)
 export(subset_safe)
 export(sym_to_ids)
