--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -324,7 +324,7 @@ jobs:
             select(di == 3).spec.filterTags.pattern = strenv(IMAGE_PATTERN) |
             select(di == 3).spec.filterTags.extract = strenv(IMAGE_EXTRACT) |
             select(di == 3).spec.policy.[strenv(IMAGE_POLICY_TYPE)].[strenv(IMAGE_POLICY_KEY)] = strenv(IMAGE_POLICY_VALUE) |
-            select(di == 4).metadata.name = strenv(DEPLOYMENT_NAME) |
+            select(di == 4).metadata.name = strenv(DEPLOYMENT_NAME)  + "-image-update" |
             select(di == 4).metadata.namespace = strenv(NAMESPACE) |
             select(di == 5).metadata.name = strenv(DEPLOYMENT_NAME) |
             select(di == 5).metadata.namespace = strenv(NAMESPACE) |
