--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -265,7 +265,7 @@ jobs:
             export IMAGE_NAME=$IMAGE_TAG-pipeline-runner
             export REPLICA_COUNT="3"
             export VERSION_NUMBER=${REF_ID/refs-tags-/}
-            export IMAGE_PATTERN="^refs-tags-(?P<version>[0-9]+\.[0-9]+\.[0-9]+)-pipeline-runner"
+            export IMAGE_PATTERN="^refs-tags-(?P<version>[0-9]+\.[0-9]+\.[0-9]+)-pipeline-runner$"
             export IMAGE_EXTRACT='$version'
             export IMAGE_POLICY_TYPE="semver"
             export IMAGE_POLICY_KEY="range"
