--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -308,12 +308,13 @@ jobs:
           echo "::set-output name=kubernetes-env::$KUBERNETES_ENV"
 
           export NAMESPACE="$DEPLOYMENT_NAME-$SANDBOX_ID"
+          export CHART_CRD_NAME="$DEPLOYENT_NAME-chart"
           export IMAGE_POLICY_TAG="{\"\$imagepolicy\": \"$NAMESPACE:$DEPLOYMENT_NAME:tag\"}"
 
           yq '
             select(di == 0).metadata.name = strenv(NAMESPACE) |
             select(di == 0).metadata.labels.sandboxId = strenv(SANDBOX_ID) |
-            select(di == 1).metadata.name = strenv(DEPLOYMENT_NAME) |
+            select(di == 1).metadata.name = strenv(CHART_CRD_NAME) |
             select(di == 1).metadata.namespace = strenv(NAMESPACE) |
             select(di == 1).spec.ref.branch = strenv(CHART_REF) |
             select(di == 2).metadata.name = strenv(DEPLOYMENT_NAME) |
@@ -331,7 +332,7 @@ jobs:
             select(di == 5).metadata.namespace = strenv(NAMESPACE) |
             select(di == 5).metadata.labels.sandboxId = strenv(SANDBOX_ID) |
             select(di == 5).spec.releaseName = strenv(DEPLOYMENT_NAME) |
-            select(di == 5).spec.chart.spec.sourceRef.name = strenv(DEPLOYMENT_NAME) |
+            select(di == 5).spec.chart.spec.sourceRef.name = strenv(CHART_CRD_NAME) |
             select(di == 5).spec.chart.spec.sourceRef.namespace = strenv(NAMESPACE) |
             select(di == 5).spec.values.clusterEnv = strenv(KUBERNETES_ENV) |
             select(di == 5).spec.values.image.registry = strenv(REGISTRY) |
