--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -43,18 +43,18 @@ jobs:
         name: Uncheck the integration checkbox
         uses: tzkhan/pr-update-action@v2
         with:
-          repo-token: "${{ secrets.API_TOKEN_GITHUB }}"
-          head-branch-regex: "${{ github.head_ref }}"
+          repo-token: '${{ secrets.API_TOKEN_GITHUB }}'
+          head-branch-regex: '${{ github.head_ref }}'
           lowercase-branch: false
-          body-template: "${{  steps.create-unchecked-pr-body.outputs.body }}"
-          body-update-action: "replace"
+          body-template: '${{  steps.create-unchecked-pr-body.outputs.body }}'
+          body-update-action: 'replace'
 
   build-docker:
     name: Build Docker container
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        project: ["pipeline-runner"]
+        project: ['pipeline-runner']
     outputs:
       repo-name: ${{ steps.ref.outputs.repo-name }}
       image-tag: ${{ steps.ref.outputs.image-tag }}
@@ -215,7 +215,7 @@ jobs:
     strategy:
       max-parallel: 1
       matrix:
-        environment: ["production", "staging", "develop"]
+        environment: ['production', 'staging', 'develop']
     steps:
       - id: checkout
         name: Check out source code
@@ -301,11 +301,11 @@ jobs:
         env:
           API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
         with:
-          source_file: "${{ steps.fill-metadata.outputs.deployment-name }}.yaml"
-          destination_repo: "${{ github.repository_owner }}/releases"
-          destination_folder: "${{ steps.fill-metadata.outputs.kubernetes-env }}"
-          user_email: "ci@biomage.net"
-          user_name: "Biomage CI/CD"
+          source_file: '${{ steps.fill-metadata.outputs.deployment-name }}.yaml'
+          destination_repo: '${{ github.repository_owner }}/releases'
+          destination_folder: '${{ steps.fill-metadata.outputs.kubernetes-env }}'
+          user_email: 'ci@biomage.net'
+          user_name: 'Biomage CI/CD'
 
       - name: Change name of deployment file for staging deployment
         if: (github.event_name == 'pull_request' || github.event_name == 'push') && matrix.environment == 'staging'
@@ -322,10 +322,10 @@ jobs:
           API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
         with:
           source_file: ${{ needs.build-docker.outputs.ref-id }}.yaml
-          destination_repo: "${{ github.repository_owner }}/releases"
-          destination_folder: "staging-candidates/${{ steps.fill-metadata.outputs.deployment-name }}"
-          user_email: "ci@biomage.net"
-          user_name: "Biomage CI/CD"
+          destination_repo: '${{ github.repository_owner }}/releases'
+          destination_folder: 'staging-candidates/${{ steps.fill-metadata.outputs.deployment-name }}'
+          user_email: 'ci@biomage.net'
+          user_name: 'Biomage CI/CD'
 
   ready-to-merge:
     name: Ready for merging
