--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -43,11 +43,11 @@ jobs:
         name: Uncheck the integration checkbox
         uses: tzkhan/pr-update-action@v2
         with:
-          repo-token: '${{ secrets.API_TOKEN_GITHUB }}'
-          head-branch-regex: '${{ github.head_ref }}'
+          repo-token: "${{ secrets.API_TOKEN_GITHUB }}"
+          head-branch-regex: "${{ github.head_ref }}"
           lowercase-branch: false
-          body-template: '${{  steps.create-unchecked-pr-body.outputs.body }}'
-          body-update-action: 'replace'
+          body-template: "${{  steps.create-unchecked-pr-body.outputs.body }}"
+          body-update-action: "replace"
 
   build-docker:
     name: Build Docker container
@@ -315,7 +315,8 @@ jobs:
           REF_ID: ${{ needs.build-docker.outputs.ref-id }}
 
       - name: Push production/develop template to releases
-        if: (matrix.environment == 'production' && github.event_name == 'release' && github.event.action == 'released') || (matrix.environment == 'develop' && github.event_name == 'push')
+        if:
+          (matrix.environment == 'production' && github.event_name == 'release' && github.event.action == 'released') || (matrix.environment == 'develop' && github.event_name == 'push')
         uses: dmnemec/copy_file_to_another_repo_action@v1.0.4
         env:
           API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
@@ -327,7 +328,8 @@ jobs:
           user_name: 'Biomage CI/CD'
 
       - name: Change name of deployment file for staging deployment
-        if: (github.event_name == 'pull_request' || github.event_name == 'push') && matrix.environment == 'staging'
+        if:
+          (github.event_name == 'pull_request' || github.event_name == 'push') && matrix.environment == 'staging'
         env:
           DEPLOYMENT_NAME: ${{ steps.fill-metadata.outputs.deployment-name }}
           REF_ID: ${{ needs.build-docker.outputs.ref-id }}
@@ -335,7 +337,8 @@ jobs:
           mv $DEPLOYMENT_NAME.yaml $REF_ID.yaml
 
       - name: Push staging deployment template to releases
-        if: (github.event_name == 'pull_request' || github.event_name == 'push') && matrix.environment == 'staging'
+        if:
+          (github.event_name == 'pull_request' || github.event_name == 'push') && matrix.environment == 'staging'
         uses: dmnemec/copy_file_to_another_repo_action@v1.0.4
         env:
           API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
