--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -261,6 +261,7 @@ jobs:
           # Deployment config for `production-default`
           if [ "${{ matrix.environment }}" = "production" ]; then
             export SANDBOX_ID="default"
+            export CHART_REF_TYPE="commit"
             export CHART_REF="$GITHUB_SHA"
             export KUBERNETES_ENV="production"
             export IMAGE_NAME=$IMAGE_TAG-pipeline-runner
@@ -277,7 +278,8 @@ jobs:
           # Deployment config for `staging-default`
           if [ "${{ matrix.environment }}" = "develop" ]; then
             export SANDBOX_ID="default"
-            export CHART_REF="$GITHUB_SHA"
+            export CHART_REF_TYPE="branch"
+            export CHART_REF="master"
             export KUBERNETES_ENV="staging"
             export IMAGE_NAME="$IMAGE_TAG-pipeline-runner-$TIMESTAMP"
             export REPLICA_COUNT="0"
@@ -292,6 +294,7 @@ jobs:
           # Deployment config for other staging env i.e. non `default`
           if [ "${{ matrix.environment }}" = "staging" ]; then
             export SANDBOX_ID="STAGING_SANDBOX_ID"
+            export CHART_REF_TYPE="branch"
             export CHART_REF="$GITHUB_HEAD_REF"
             export KUBERNETES_ENV="staging"
             export IMAGE_NAME="$IMAGE_TAG-pipeline-runner-$TIMESTAMP"
@@ -316,7 +319,7 @@ jobs:
             select(di == 0).metadata.labels.sandboxId = strenv(SANDBOX_ID) |
             select(di == 1).metadata.name = strenv(CHART_CRD_NAME) |
             select(di == 1).metadata.namespace = strenv(NAMESPACE) |
-            select(di == 1).spec.ref.branch = strenv(CHART_REF) |
+            select(di == 1).spec.ref.[strenv(CHART_REF_TYPE)] = strenv(CHART_REF) |
             select(di == 2).metadata.name = strenv(DEPLOYMENT_NAME) |
             select(di == 2).metadata.namespace = strenv(NAMESPACE) |
             select(di == 2).spec.image = strenv(REGISTRY) + "/" + strenv(DEPLOYMENT_NAME) |
