--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -43,6 +43,7 @@ jobs:
 
           echo "::set-output name=body::$UNCHECKED_BODY"
 
+
       - id: uncheck-integration-checkbox
         name: Uncheck the integration checkbox
         uses: tzkhan/pr-update-action@v2
@@ -78,7 +79,7 @@ jobs:
           # This will take a ref like `refs/heads/master`
           # and turn it into `refs-heads-master`
           REF_ID=$(echo $GITHUB_REF | sed 's/\//-/g')
-          echo "::set-output name=ref-id::$REF_ID"
+          echo "ref-id=$REF_ID" >> $GITHUB_OUTPUT
 
           # the final tag is something like:
           # refs-heads-master-a4f8bc313dae
@@ -111,19 +112,21 @@ jobs:
           # IMAGE_TAG is used in the Build Docker Image step.
           # We can easily build the image-tag from REF_ID and COMMIT_SHA for non-production releases.
           # But we can not easily create the image tag for production releases, so we're bulding it here
-          echo "::set-output name=image-tag::$IMAGE_TAG"
-          echo "::set-output name=batch-image-tag::$BATCH_IMAGE_TAG"
+          echo "image-tag=$IMAGE_TAG" >> $GITHUB_OUTPUT
+          echo "batch-image-tag=$BATCH_IMAGE_TAG" >> $GITHUB_OUTPUT
 
           # TIMESTAMP is used to postfix images in the "push docker images to ECR" step.
           # The timestamp is used by Flux to auto update images for staging environments.
           # Images for production uses semantic versioning to determine the latest image.
-          echo "::set-output name=timestamp::$TIMESTAMP"
+          echo "timestamp=$TIMESTAMP" >> $GITHUB_OUTPUT
+
 
           # This will take a GitHub repo name like `biomage-org/releases`
           # and turns it into `releases`. This will be the name of the
           # ECR repository.
           IMAGE_REPO_NAME=$(echo $GITHUB_REPOSITORY | awk -F '/' '{print $2}')
-          echo "::set-output name=repo-name::$IMAGE_REPO_NAME"
+          echo "repo-name=$IMAGE_REPO_NAME" >> $GITHUB_OUTPUT
+
 
       - id: ref-previous
         name: Format docker tag and repository name for the previous pushed image.
@@ -132,20 +135,20 @@ jobs:
             echo "This is a pull request, base ref and sha set to the target branch."
             BASE_REF="refs-heads-${{ github.event.pull_request.base.ref }}"
             BASE_SHA=${{ github.event.pull_request.base.sha }}
-            echo "::set-output name=tag::$BASE_REF-$BASE_SHA"
+            echo "tag=$BASE_REF-$BASE_SHA" >> $GITHUB_OUTPUT
           fi
 
           if [ "${{ github.event_name }}" = "push" ]; then
             echo "This is a push, base ref and sha set to the previous commit."
             BASE_REF=$(echo $GITHUB_REF | sed 's/\//-/g')
             BASE_SHA="${{ github.event.before }}"
-            echo "::set-output name=tag::$BASE_REF-$BASE_SHA"
+            echo "tag=$BASE_REF-$BASE_SHA" >> $GITHUB_OUTPUT
           fi
 
           if [ "${{ github.event_name }}" = "release" ]; then
             echo "This is a release, base ref and sha set to the current commit."
             BASE_SHA="$GITHUB_SHA"
-            echo "::set-output name=tag::refs-heads-master-$BASE_SHA"
+            echo "tag=refs-heads-master-$BASE_SHA" >> $GITHUB_OUTPUT
           fi
 
       - id: set-up-creds
@@ -275,7 +278,8 @@ jobs:
         name: Fill out a new HelmRelease resource
         run: |-
           export DEPLOYMENT_NAME=$(echo $GITHUB_REPOSITORY | awk -F '/' '{print $2}')
-          echo "::set-output name=deployment-name::$DEPLOYMENT_NAME"
+          echo "deployment-name=$DEPLOYMENT_NAME" >> $GITHUB_OUTPUT
+
 
           # Deployment config for `production-default`
           if [ "${{ matrix.environment }}" = "production" ]; then
@@ -338,8 +342,8 @@ jobs:
             export MANIFEST_PATH="./staging"
           fi
 
-          echo "::set-output name=sandbox-id::$SANDBOX_ID"
-          echo "::set-output name=kubernetes-env::$KUBERNETES_ENV"
+          echo "sandbox-id=$SANDBOX_ID" >> $GITHUB_OUTPUT
+          echo "kubernetes-env=$KUBERNETES_ENV" >> $GITHUB_OUTPUT
 
           export NAMESPACE="$DEPLOYMENT_NAME-$SANDBOX_ID"
           export CHART_CRD_NAME="$DEPLOYMENT_NAME-chart"
