--- a/pipeline-runner/DESCRIPTION
+++ b/pipeline-runner/DESCRIPTION
@@ -24,7 +24,8 @@ Suggests:
     roxygen2,
     styler,
     testthat (>= 3.0.0),
-    usethis
+    usethis,
+    glmGamPoi
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
