monitor with datadog

--- a/pipeline-runner/Dockerfile
+++ b/pipeline-runner/Dockerfile
@@ -116,11 +116,13 @@ FROM common AS batch
 #
 # see at https://github.com/paws-r/paws/blob/main/docs/credentials.md for how PAWS
 # handles this
+COPY ./datadog-batch ./datadog-batch
 RUN wget -O jq https://github.com/stedolan/jq/releases/download/jq-1.6/jq-linux64 && \
     chmod +x ./jq && \
     cp jq /usr/bin && \
     pip install PyYAML==3.10 && \
-    pip install awscli==1.25.0
+    pip install awscli==1.25.0 && \
+    pip install -r ./datadog-batch/requirements.txt
 
 # add R package files and runner
 ADD R ./R
