--- a/pipeline-runner/NAMESPACE
+++ b/pipeline-runner/NAMESPACE
@@ -2,8 +2,10 @@
 
 export(add_metadata)
 export(add_new_sample_ids)
+export(add_subset_metadata)
 export(build_cc_gene_list)
 export(build_metadata_cellsets)
+export(cbind_cellset_type)
 export(create_sample_id_map)
 export(create_scdata)
 export(create_seurat)
@@ -30,6 +32,7 @@ export(integrate_scdata)
 export(learn_from_sketches)
 export(list_exclude_genes)
 export(load_cellsets)
+export(load_parental_data)
 export(load_user_files)
 export(log_normalize)
 export(make_annot_with_ids)
@@ -46,7 +49,9 @@ export(runClusters)
 export(run_emptydrops)
 export(run_geosketch)
 export(run_pca)
+export(safe_cbind)
 export(score_doublets)
+export(subset_experiment)
 export(subset_ids)
 export(subset_safe)
 export(sym_to_ids)
