--- a/pipeline-runner/NAMESPACE
+++ b/pipeline-runner/NAMESPACE
@@ -32,7 +32,7 @@ export(integrate_scdata)
 export(learn_from_sketches)
 export(list_exclude_genes)
 export(load_cellsets)
-export(load_parental_data)
+export(load_parent_experiment_data)
 export(load_user_files)
 export(log_normalize)
 export(make_annot_with_ids)
