address martin's comments

--- a/pipeline-runner/NAMESPACE
+++ b/pipeline-runner/NAMESPACE
@@ -9,7 +9,6 @@ export(cbind_cellset_type)
 export(create_sample_id_map)
 export(create_scdata)
 export(create_seurat)
-export(create_subset_experiment)
 export(diet_scdata)
 export(download_user_files)
 export(embed_and_cluster)
@@ -54,6 +53,7 @@ export(score_doublets)
 export(subset_experiment)
 export(subset_ids)
 export(subset_safe)
+export(subset_seurat)
 export(sym_to_ids)
 export(upload_to_aws)
 import(data.table)
