--- a/pipeline-runner/NAMESPACE
+++ b/pipeline-runner/NAMESPACE
@@ -6,6 +6,7 @@ export(add_subset_metadata)
 export(build_cc_gene_list)
 export(build_metadata_cellsets)
 export(cbind_cellset_type)
+export(compute_sample_edrops)
 export(create_sample_id_map)
 export(create_scdata)
 export(create_seurat)
