simplify metadata cellsets

--- a/pipeline-runner/NAMESPACE
+++ b/pipeline-runner/NAMESPACE
@@ -15,6 +15,7 @@ export(create_seurat)
 export(diet_scdata)
 export(download_user_files)
 export(embed_and_cluster)
+export(extract_subset_user_metadata)
 export(filter_doublets)
 export(filter_emptydrops)
 export(filter_gene_umi_outlier)
