--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -209,16 +209,16 @@ jobs:
           BATCH_IMAGE_NAME: ${{ format('{0}/{1}:batch-{2}', steps.login-ecr.outputs.registry, steps.ref.outputs.repo-name, steps.ref.outputs.batch-image-tag) }}
           GITHUB_PAT: ${{ secrets.API_TOKEN_GITHUB }}
 
-      # - id: codecov
-      #   name: Generate codecov report
-      #   run: |-
-      #     docker run \
-      #       --entrypoint /bin/bash \
-      #       -v $(pwd)/covr:/covr $IMAGE_NAME \
-      #       -c "R -e 'cov <- covr::package_coverage(); covr::to_cobertura(cov, \"/covr/coverage.xml\")'"
+      - id: codecov
+        name: Generate codecov report
+        run: |-
+          docker run \
+            --entrypoint /bin/bash \
+            -v $(pwd)/covr:/covr $IMAGE_NAME \
+            -c "R -e 'cov <- covr::package_coverage(); covr::to_cobertura(cov, \"/covr/coverage.xml\")'"
 
-      #   env:
-      #     IMAGE_NAME: ${{ format('{0}/{1}:{2}-{3}', steps.login-ecr.outputs.registry, steps.ref.outputs.repo-name, steps.ref.outputs.image-tag, matrix.project) }}
+        env:
+          IMAGE_NAME: ${{ format('{0}/{1}:{2}-{3}', steps.login-ecr.outputs.registry, steps.ref.outputs.repo-name, steps.ref.outputs.image-tag, matrix.project) }}
 
       - id: upload-coverage
         name: Upload coverage to Codecov
