--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -41,7 +41,7 @@ jobs:
           echo "Unchecked PR body"
           echo $UNCHECKED_BODY
 
-          echo "::set-output name=body::$UNCHECKED_BODY"
+          echo "{body}={$UNCHECKED_BODY} >> $GITHUB_OUTPUT"
 
 
       - id: uncheck-integration-checkbox
