--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -37,6 +37,8 @@ jobs:
           echo "Unchecked PR body"
           echo $UNCHECKED_BODY
 
+          # This sets multiline strings into the output variable
+          # See https://docs.github.com/en/actions/using-workflows/workflow-commands-for-github-actions#example-of-a-multiline-string
           echo "body<<EOF" >> $GITHUB_OUTPUT
           echo $UNCHECKED_BODY >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
