Add repository owner to ci config

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -355,6 +355,7 @@ jobs:
             select(di == 1).metadata.name = strenv(CHART_CRD_NAME) |
             select(di == 1).metadata.namespace = strenv(NAMESPACE) |
             select(di == 1).spec.ref.[strenv(CHART_REF_TYPE)] = strenv(CHART_REF) |
+            select(di == 1).spec.url = "https://github.com/" + strenv(GITHUB_OWNER) + "/pipeline"
             select(di == 2).metadata.name = strenv(DEPLOYMENT_NAME) |
             select(di == 2).metadata.namespace = strenv(NAMESPACE) |
             select(di == 2).spec.image = strenv(REGISTRY) + "/" + strenv(DEPLOYMENT_NAME) |
